[package]
name = "relay-client"
version = "0.1.0"
edition = "2021"

[dependencies.lay]
version = "0.1"
path = "../"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde_json = "1"
ratatui = { version = "0.22", features = ["all-widgets"] }
