[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

[dependencies.lay]
version = "0.1"
path = "../"

[dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.6", features = ["http2", "multipart"] }
rbs = "4.3"
rbatis = "4.3"
rbdc-sqlite = "4.3"
